--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <ul class="features-list list">
             <li class="features-item">
               <div class="features-cntr">
-                <svg class="features-icon" width="70" height="70">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images_index/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -96,7 +96,7 @@
             </li>
             <li class="features-item">
               <div class="features-cntr">
-                <svg class="features-icon" width="70" height="70">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images_index/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -105,7 +105,7 @@
             </li>
             <li class="features-item">
               <div class="features-cntr">
-                <svg class="features-icon" width="70" height="70">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images_index/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -116,7 +116,7 @@
             </li>
             <li class="features-item">
               <div class="features-cntr">
-                <svg class="features-icon" width="70" height="70">
+                <svg class="features-icon" width="64" height="64">
                   <use
                     href="./images_index/symbol-defs.svg#icon-astronaut"
                   ></use>
@@ -162,7 +162,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container">
+        <div class="container team-cntr">
           <h2 class="team-title">Our team</h2>
           <ul class="team-list list">
             <li class="team-iteam">
