--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
             <h1 class="main-title visually-hidden">gallery</h1>
             <ul class="btn-list list">
               <li class="btn-item">
-                <button class="btn-nav-accent btn" type="button">All</button>
+                <button class="btn-nav accent-btn btn" type="button">All</button>
               </li>
               <li class="btn-item">
                 <button class="btn-nav btn" type="button">Web Site</button>
@@ -100,7 +100,7 @@
                     src="./images_portfolio/banking.jpg"
                     alt="Banking App Interface Concept"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Banking App Interface Concept</h2>
                     <p class="gallery-text">App</p>
                   </div></a>
@@ -113,7 +113,7 @@
                     src="./images_portfolio/cashless.jpg"
                     alt="Cashless Payment"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Cashless Payment</h2>
                     <p class="gallery-text">Marketing</p>
                   </div></a>
@@ -126,7 +126,7 @@
                     src="./images_portfolio/meditation.jpg"
                     alt="Meditaion App"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Meditaion App</h2>
                     <p class="gallery-text">App</p>
                   </div></a>
@@ -139,7 +139,7 @@
                     src="./images_portfolio/taxi.jpg"
                     alt="Taxi Service"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Taxi Service</h2>
                     <p class="gallery-text">Marketing</p>
                   </div></a>
@@ -152,7 +152,7 @@
                     src="./images_portfolio/screen.jpg"
                     alt="Screen Illustrations"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Screen Illustrations</h2>
                     <p class="gallery-text">Design</p>
                   </div></a>
@@ -165,7 +165,7 @@
                     src="./images_portfolio/online.jpg"
                     alt="Online Courses"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Online Courses</h2>
                     <p class="gallery-text">Marketing</p>
                   </div></a>
@@ -178,7 +178,7 @@
                     src="./images_portfolio/instagram.jpg"
                     alt="Instagram Stories Concept"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Instagram Stories Concept</h2>
                     <p class="gallery-text">Design</p>
                   </div></a>
@@ -191,7 +191,7 @@
                     src="./images_portfolio/food.jpg"
                     alt="Organic Food"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Organic Food</h2>
                     <p class="gallery-text">Web Site</p>
                   </div></a>
@@ -204,7 +204,7 @@
                     src="./images_portfolio/coffe.jpg"
                     alt="Fresh Coffee"
                   />
-                  <div class="foto-cntr">
+                  <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Fresh Coffee</h2>
                     <p class="gallery-text">Web Site</p>
                   </div></a>
