--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Studio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com>" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com>" > -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
     <header class="header">
@@ -137,26 +137,26 @@
             <li class="skills-item">
               <img
                 class="skills-foto"
-                src="./images_index/img 1.jpg"
+                src="./images_index/img_1.jpg"
                 alt="Пишемо код"
                 width="370"
-              />
+              >
             </li>
             <li class="skills-item">
               <img
                 class="skills-foto"
-                src="./images_index/img 2.jpg"
+                src="./images_index/img_2.jpg"
                 alt="Розробляємо інтерфейс"
                 width="370"
-              />
+              >
             </li>
             <li class="skills-item">
               <img
                 class="skills-foto"
-                src="./images_index/img 3.jpg"
+                src="./images_index/img_3.jpg"
                 alt="Узгоджуємо палітру кольорів"
                 width="370"
-              />
+              >
             </li>
           </ul>
         </div>
@@ -171,7 +171,7 @@
                 src="./images_index/mark.jpg"
                 alt="Mark Guerrero"
                 width="270"
-              />
+              >
               <div class="foto-cntr">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -221,7 +221,7 @@
                 src="./images_index/tom.jpg"
                 alt="Tom Ford"
                 width="270"
-              />
+              >
               <div class="foto-cntr">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -271,7 +271,7 @@
                 src="./images_index/camila.jpg"
                 alt="Camila Garcia"
                 width="270"
-              />
+              >
               <div class="foto-cntr">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -321,7 +321,7 @@
                 src="./images_index/dania.jpg"
                 alt="Daniel Wilson"
                 width="270"
-              />
+              >
               <div class="foto-cntr">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
