--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com>" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com>" > -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
     <header class="header">
@@ -99,7 +99,7 @@
                     class="foto"
                     src="./images_portfolio/banking.jpg"
                     alt="Banking App Interface Concept"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Banking App Interface Concept</h2>
                     <p class="gallery-text">App</p>
@@ -112,7 +112,7 @@
                     class="foto"
                     src="./images_portfolio/cashless.jpg"
                     alt="Cashless Payment"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Cashless Payment</h2>
                     <p class="gallery-text">Marketing</p>
@@ -125,7 +125,7 @@
                     class="foto"
                     src="./images_portfolio/meditation.jpg"
                     alt="Meditaion App"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Meditaion App</h2>
                     <p class="gallery-text">App</p>
@@ -138,7 +138,7 @@
                     class="foto"
                     src="./images_portfolio/taxi.jpg"
                     alt="Taxi Service"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Taxi Service</h2>
                     <p class="gallery-text">Marketing</p>
@@ -151,7 +151,7 @@
                     class="foto"
                     src="./images_portfolio/screen.jpg"
                     alt="Screen Illustrations"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Screen Illustrations</h2>
                     <p class="gallery-text">Design</p>
@@ -164,7 +164,7 @@
                     class="foto"
                     src="./images_portfolio/online.jpg"
                     alt="Online Courses"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Online Courses</h2>
                     <p class="gallery-text">Marketing</p>
@@ -177,7 +177,7 @@
                     class="foto"
                     src="./images_portfolio/instagram.jpg"
                     alt="Instagram Stories Concept"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Instagram Stories Concept</h2>
                     <p class="gallery-text">Design</p>
@@ -190,7 +190,7 @@
                     class="foto"
                     src="./images_portfolio/food.jpg"
                     alt="Organic Food"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Organic Food</h2>
                     <p class="gallery-text">Web Site</p>
@@ -203,7 +203,7 @@
                     class="foto"
                     src="./images_portfolio/coffe.jpg"
                     alt="Fresh Coffee"
-                  />
+                  >
                   <div class="foto-cntr-port">
                     <h2 class="gallery-subtitle">Fresh Coffee</h2>
                     <p class="gallery-text">Web Site</p>
